--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA:scheduler}
 
 spring.quartz.job-store-type=jdbc
 spring.quartz.jdbc.initialize-schema=never
@@ -25,4 +26,6 @@ spring.rabbitmq.host=${RABBITMQ_URL}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+
+
 
