--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
             isClustered: 'true'
             driverDelegateClass: org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
             dataSource: myDS
+            tablePrefix: ${DB_SCHEMA:scheduler}.qrtz_
           scheduler:
             instanceName: czertainly-scheduler
             instanceId: AUTO
