--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
     port: ${RABBITMQ_PORT:5672}
     host: ${RABBITMQ_HOST}
     username: ${RABBITMQ_USERNAME}
+    virtual-host: ${RABBITMQ_VHOST:czertainly}
   jpa:
     generate-ddl: 'true'
     hibernate:
