--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>17</java.version>
         <sonar.projectKey>3KeyCompany_CZERTAINLY-Scheduler</sonar.projectKey>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
