--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
     <parent>
         <groupId>com.czertainly</groupId>
         <artifactId>dependencies</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.czertainly</groupId>
     <artifactId>CZERTAINLY-Scheduler</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <name>CZERTAINLY-Scheduler</name>
@@ -16,9 +15,9 @@
     <description>CZERTAINLY-Scheduler</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
+        <c3p0.version>0.10.1</c3p0.version>
         <sonar.projectKey>3KeyCompany_CZERTAINLY-Scheduler</sonar.projectKey>
-        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
@@ -27,7 +26,7 @@
         <dependency>
             <groupId>com.czertainly</groupId>
             <artifactId>interfaces</artifactId>
-            <version>2.9.0</version>
+            <version>2.12.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Spring libraries -->
@@ -60,12 +59,11 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.5.5</version>
+            <version>${c3p0.version}</version>
         </dependency>
 
         <!-- Postgresql -->
@@ -77,7 +75,6 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.23.0</version>
         </dependency>
 
         <!-- Supported libraries -->
@@ -85,6 +82,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
 
         <!-- TESTs -->
@@ -115,7 +113,7 @@
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/3keycompany/*</url>
+            <url>https://maven.pkg.github.com/czertainly/*</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
