--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
     <properties>
         <java.version>21</java.version>
         <c3p0.version>0.10.1</c3p0.version>
-        <sonar.projectKey>3KeyCompany_CZERTAINLY-Scheduler</sonar.projectKey>
+        <sonar.organization>czertainly</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>CZERTAINLY_CZERTAINLY-Scheduler</sonar.projectKey>
     </properties>
 
     <dependencies>
