--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>21</java.version>
         <c3p0.version>0.10.1</c3p0.version>
+        <mchange-commons-java.version>0.3.1</mchange-commons-java.version>
         <sonar.organization>czertainly</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.projectKey>CZERTAINLY_CZERTAINLY-Scheduler</sonar.projectKey>
@@ -66,6 +67,11 @@
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>${c3p0.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>${mchange-commons-java.version}</version>
         </dependency>
 
         <!-- Postgresql -->
